# retrotrends-ingestor

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: ci.yml
ingestion/: db.py  ebay_client.py  ingestion.py  main.py  matcher.py  models.py  requirements.txt  status_checker.py  title_utils.py
migrations/: 001_initial_schema.sql
tests/: test_ebay_client.py  test_matcher.py
