[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrotrends-ingestor"
version = "0.1.0"
description = "eBay ingestion service for RetroTrends historical game pricing"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-requests>=2.31",
]

[project.scripts]
# Allows: retrotrends-ingest ingest / check-status / both
retrotrends-ingest = "ingestion.main:main"

[tool.setuptools.packages.find]
include = ["ingestion*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore  = ["E501"]   # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["ingestion"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version   = "3.12"
strict           = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
